welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
  if (bOk) {
    if (c>=a) {return true}
    else  {return false}}
  else {
    if (b>=a && c>=b) {return true}
    else { retur nfalse}}
}